--- a/02_2024-10-02/sample12-02.htm
+++ b/02_2024-10-02/sample12-02.htm
@@ -8,11 +8,11 @@
 
 <body>
     名前と住所を入力して[送信]ボタンをクリックしてください。
-    <from action="sample12-02.php" method="GET">
+    <form action="sample12-02.php" method="GET">
         <p>名前: <input size="40" type="text" name="username"></p>
         <p>住所: <input size="40" type="text" name="useraddress"></p>
         <input type="submit" name="btnExec" value="送信">
-    </from>
+    </form>
 </body>
 
 </html>
