--- a/02_2024-10-02/sample12-06.html
+++ b/02_2024-10-02/sample12-06.html
@@ -9,11 +9,11 @@
 <body>
     好きなリンクをクリックしてください。
     <ul>
-        <li><a href="sample12-06.php?data1=10&data2=20&data3=ABCD">10と20とABCD</a></li>
+        <li><a href="sample12-06.php?data1=10&data2=20&data3=ABCD">10と20とABCD</a>
         <br><br>
-        <li><a href="sample12-06.php?data1=20&data2=80&data3=EFGH">20と80とEFGH</a></li>
+        <li><a href="sample12-06.php?data1=20&data2=80&data3=EFGH">20と80とEFGH</a>
         <br><br>
-        <li><a href="sample12-06.php?data1=88&data2=99&data3=WXYZ">88と99とWXYZ</a></li>
+        <li><a href="sample12-06.php?data1=88&data2=99&data3=WXYZ">88と99とWXYZ</a>
         <br><br>
     </ul>
 </body>
